# python-cpl

./: .gitignore  .landscape.yaml  .landscape.yml  .travis.yml  ChangeLog  MANIFEST.in  README  README.rst  mkdebian.py  setup.py
cpl/: CPL_library.c  CPL_library.h  CPL_recipe.c  __init__.py  cpl_api.h  dfs.py  drs.py  esorex.py  frames.py  log.py  logger.py  md5sum.py  param.py  parameters.py  recipe.py  recipes.py  restricteddict.py  result.py  run.py  version.py
debian/: changelog  clean  control  copyright  rules  watch
doc/: Makefile  conf.py  dfs.rst  drs.rst  error.rst  esorex.rst  frames.rst  index.rst  install.rst  msg.rst  parallel.rst  param.rst  recipe.rst  restrictions.rst  result.rst  tutorial.rst
oca/: cplrules.py  muse_oca.py  oca_copy.py  ocawriter.py  organizer.py  parser.g  pyparser.py  rawrules.py
test/: TestRecipe.py  rtest.c
test/iiinstrumentp/: .gitignore  AUTHORS  Makefile.am  Makefile.purify.in  acinclude.m4  bootstrap  configure.ac  setup
test/iiinstrumentp/admin/: html.am
test/iiinstrumentp/doxygen/: Doxyfile.in
test/iiinstrumentp/iiinstrument/: Makefile.am  iiinstrument_dfs.c  iiinstrument_dfs.h  iiinstrument_pfits.c  iiinstrument_pfits.h  iiinstrument_utils.c  iiinstrument_utils.h
test/iiinstrumentp/iiinstrument/tests/: Makefile.am  iiinstrument_dfs-test.c
test/iiinstrumentp/m4macros/: cpl.m4  eso.m4  purify.m4
test/iiinstrumentp/recipes/: Makefile.am  rrrecipe.c  rtest.c
